<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">MyVPN.RUN</string>

    <string name="nav_new_token">New token</string>
    <string name="nav_tokens">Tokens</string>
    <string name="nav_droplets">Server list</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_servers">Servers</string>
    <string name="nav_add_server">Add server</string>
    <string name="nav_server">Server</string>


    <string name="hint_token">API key</string>
    <string name="hint_token_name">Key name</string>
    <string name="save_token">Save token</string>
    <string name="hint_provider_summary">Choose hosting provider</string>
    <string name="hint_token_summary">Choose API key</string>
    <string name="hint_region_summary">Choose region</string>
    <string name="hint_server_name_summary">Server name</string>

    <string name="complete_msg">Completed</string>
    <string name="unknown_error_msg">Unknown error</string>
    <string name="grant_permissions">You have to access this permission in order to you app</string>
    <string name="no_servers">No servers\nPress + to add server</string>

    <string name="delete_action">Delete</string>
    <string name="setting_up">Setting up in progress</string>
    <string name="setup_server">Setup server</string>
    <string name="connect_to_vpn_action">Connect to VPN</string>
    <string name="disconnect_action">Disconnect</string>
    <string name="prepare_vpn_action">Prepare VPN server</string>

    <string name="create_server" >Create server and get vpn access</string>
    <string name="setup_server_msg">Setting up your server, it may takes 2&#8211;5 minutes</string>
    <string name="receiving_access_msg">Receiving vpn access, please wait…</string>
    <string name="loading_regions_msg">Loading regions, please wait…</string>
    <string name="try_for_free">Try for free</string>

    <string name="connected">Connected</string>
    <string name="starting">Starting</string>
    <string name="ready">Ready</string>
    <string name="error">Error</string>
    <string name="in_process">In process</string>
    <string name="pending">Set up</string>
    <string name="server_prefix">Server:</string>
    <string name="provider_prefix">Provider:</string>
    <string name="region_prefix">Region:</string>
    <string name="language">Language</string>

    <string name="access_key">Access key</string>
    <string name="secret_key">Secret key</string>

    <string name="no_data_msg">No data</string>
    <string name="already_added_msg">Already added</string>
    <string name="banned_msg">The IP address of the created server is blocked by supervisory authorities in your country</string>
    <string name="successfully_deleted">Successfully deleted</string>

    <string name="wrong_server_name">Server name must be at least 3 characters and contains only latin characters</string>
    <string name="empty_server_name">Server name can not be empty</string>

    <string name="retry">Retry</string>

    <string name="tokens">Tokens</string>

    <string name="share_ovpn_action">Share OVPN file</string>
    <string name="share_ovpn_to">Share ovpn file to&#8230;</string>
    <string name="share" translatable="false">Share</string>

    <string name="error_dialog_message">An error occurred while configuring the server, delete it and try again</string>
    <string name="error_dialog_positive">Delete server</string>
    <string name="error_dialog_negative">Cancel</string>

    <string name="add_server_without_vpn_message">To create a new server, you need a direct connection to the provider</string>
    <string name="add_server_positive">Turn VPN off</string>
    <string name="add_server_negative">Cancel</string>

    <string name="choose_provider">Choose provider</string>
    
    <string name="region">Region: %1$s</string>
    <string name="address">IP Address: %1$s</string>
    <string name="type">VPN Type: %1$s</string>
    <string name="vpn_type">Vpn Type</string>

    <string name="show_qr">Show QR Code</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>

    <string name="server_config">Server config</string>
    <string name="qr_code">QR Code</string>
    <string name="save_config">Save *.conf</string>

    <string name="wireguard_title">WireGuard</string>
    <string name="wireguard_description">Your config file saved in\n%1$s\nOpen WireGuard application, press create from file or archive and choose this file in file manager</string>
    <string name="wireguard_positive_text">I See</string>

    <string name="delete_server">Delete server?</string>
    <string name="delete_token">Delete key?</string>
    <string name="delete_token_msg">In case of deleting provider\'s access key you will lose control under all your servers</string>

    <string name="choose_provider_hint">Choose hosting provider</string>
    <string name="provider_unavailable">Provider is not available</string>
    
    <string name="setting_server">Setting up server</string>
    <string name="connecting_to_server">Connecting to server</string>
    <string name="checking_server">Checking server status</string>
    <string name="creating_server">Creating a new server</string>
    <string name="ssh_keys">Generating ssh keys</string>

    <string name="security_protocol">Security protocol:</string>
    <string name="time_session">Time session</string>
    <string name="custom_server">Other server</string>
    <string name="ip_address">IP</string>
    <string name="username">Username</string>
    <string name="port">Port</string>
    <string name="setup_ssh_connection">Setup SSH connection</string>
    <string name="unknown_region">Unknown region</string>
    <string name="private_key_auth">Private key authorization</string>
    <string name="password_hint">Password</string>
    <string name="ssh_key_hint">Private SSH key</string>
    <string name="field_error">Field can not be empty</string>
    <string name="fill_fields_msg">Please, fill fields correctly</string>
    <string name="V2Ray" translatable="false">V2Ray</string>
    <string name="ip_not_valid">Address is not valid</string>
    <string name="debian_9">Requires a clean Debian 9 server</string>
    <string name="log_in">Log in</string>
    <string name="trial_is_over">Trial is over</string>
    <string name="trial_is_over_msg">Thank you for using MyVpn.RUN. One hour of free period has left. Please, choose your provider and log in.</string>
    <string name="trial_msg">In an hour, your access will be revoked, regardless of whether you use a VPN or not</string>

    <string name="digital_ocean_client_id">5ac7fe6563469c85ed75f4375779d6656a67f721442f61bdfd616955e6778bad</string>

    <string name="v2ray_required">V2Ray plugin is required</string>
    <string name="v2ray_required_msg">Current server needs V2Ray plugin to be installed. Click \"Download\" to go to the Google Play.</string>

    <string name="period">Subscription period</string>
    <string name="new_words_count">New words count</string>
    <string name="price">Price</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_expity_date">Subscription available until %1$s</string>
    <string name="change_region">Change region</string>
    <string name="choose_tariff">Choose tariff</string>
    <string name="plan_includes">Everyone tariff plan includes:</string>
    <string name="dedicated_access">Dedicated access</string>
    <string name="unlimited_speed">Unlimited speed</string>
    <string name="choosing_security_protocol">Choosing security protocol</string>
    <string name="price_with_period">%1$s for %2$s</string>
    <string name="choose_region">Choose region</string>
    <string name="for_month">for month</string>
    <string name="choose_protocol">Choose protocol</string>
    <string name="session_time">Session time</string>
    <string name="protocol">Protocol</string>
    <string name="region1">Region</string>
    <string name="connected_to_vpn">You are connected to VPN</string>

    <string name="download">Download</string>
    <string-array name="language_entries">
        <item>ic_english</item>
        <item>ic_russian</item>
    </string-array>

    <string-array name="language_entry_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
</resources>
