<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/connect_action"
            android:orderInCategory="300"
            android:title="@string/connect_to_vpn_action"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/prepare_action"
            android:orderInCategory="300"
            android:title="@string/prepare_vpn_action"
            app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share_ovpn_action"
        android:orderInCategory="300"
        android:title="@string/share_ovpn_action"
        app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/delete_action"
            android:orderInCategory="300"
            android:title="@string/delete_action"
            app:showAsAction="ifRoom"/>
</menu>