<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_tokens"
        android:orderInCategory="300"
        android:title="@string/nav_tokens"
        android:icon="@drawable/ic_token"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/nav_droplets"
        android:orderInCategory="300"
        android:title="@string/nav_droplets"
        android:icon="@drawable/ic_cloud"
        app:showAsAction="ifRoom">

    </item>

    <item
            android:id="@+id/nav_settings"
            android:orderInCategory="300"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="ifRoom">

    </item>
</menu>